memo/memo/tests/fail-empty-attribute.stderr
error: expected lifetime in #[memo('a)]
 --> tests/fail-empty-attribute.rs:3:1
  |
3 | #[memo]
  | ^^^^^^^
  |
  = note: this error originates in the attribute macro `memo` (in Nightly builds, run with -Z macro-backtrace for more info)
