memo/memo/tests/fail-empty-attribute.rs
use memo_with_references::memo;

#[memo]
fn test_empty_attribute() {}

fn main() {}
